# freertos-pico-sdk

./: CMakeLists.txt  README.md  app_hooks.c  main.c
include/: FreeRTOSConfig.h
